--- a/Ecsite_ver2/src/main/resources/templates/index.html
+++ b/Ecsite_ver2/src/main/resources/templates/index.html
@@ -79,6 +79,7 @@
 								th:text="${jw.CATEGORY_NAME+':'+jw.GOODS_NAME}"></dd>
 							<dd th:text="${jw.GOODS_PRICE}+円"></dd>
 						</dl>
+		<!-- カテゴリ季節のおすすめアイテム -->
 					<li th:each="s:${season}">
 						<dl>
 							<dt>
