--- a/Ecsite_ver2/src/main/resources/templates/cart.html
+++ b/Ecsite_ver2/src/main/resources/templates/cart.html
@@ -2,6 +2,7 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <mata charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>Handmade Nariko</title>
 <link rel="stylesheet" href="css/mystyle.css">
 <link rel="stylesheet" href="js/slick-theme.css" type="text/css">
@@ -10,17 +11,20 @@
 	href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
 	crossorigin="anonymous">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <script
 	src="js/slick.min.js"></script> <script src="myjs.js"></script>
 </head>
-<body>
-	<header>
-		<div class="shop_name">
+<body class="container-fluid">
+	<header class="row">
+		<div class="shop_name col-md-4 col-sm-4 col-xs-12">
 			<p>手作りちりめん細工の通販サイト</p>
 			<h1>ハンドメイドのNariko</h1>
 		</div>
 		<nav>
-			<ul class="menu">
+			<ul class="menu col-md-8 col-sm-8 col-xs-12">
 				<li><a href="/index"><i class="fas fa-home"></i>Home</a></li>
 				<li><a href="/mypage"> <i class="fas fa-user-circle"></i>Mypage
 				</a></li>
@@ -37,55 +41,62 @@
 			</ul>
 		</nav>
 	</header>
-	<article>
-		<div class="main">
+	<article class="row">
+		<div class="main col-md-12 col-sm-12 col-xs-12">
 			<section class="sec_goods">
 				<h2 class="goods">Cart</h2>
+				<!-- ログインしていなければ表示 -->
 				<p th:if="${user eq null}" th:text="お客様のショッピングカートには商品がありません"></p>
-				<table>
-					<tr>
-					<!-- <th>日付</th> -->
-						<th>品名</th>
-						<th>単価</th>
-						<th>個数</th>
-						<th>金額</th>
-					</tr>
-					<tr>
-						<!-- ログインしていなければ表示 -->
-						<td th:if="${user eq null}" th:text="${message}"></td>
-					</tr>
-					<tr><td th:text="${empty}"></td></tr>
-					<tr th:each="c:${cartlist}">
-						<!-- ログインしていれば、カートに表示 -->
-				<!--	<td th:text="${c.CART_DATE}"></td>  -->
-						<td th:text="${c.GOODS_NAME}"></td>
-						<td th:text="${c.GOODS_PRICE}+円"></td>
-						<td th:text="${c.COUNT}"></td>
-				<!--	<td>
+				<div th:if="${user eq null}" th:text="${message}"></div>
+				<table class="buylist"  th:if="${user ne null}" >
+					<caption class="boughthistory">カートの中身</caption>
+					<thead>
+						<tr>
+							<th>日付</th>
+							<th>品名</th>
+							<th>単価</th>
+							<th>個数</th>
+							<th>金額</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+
+						<tr th:each="c:${cartlist}">
+							<!-- ログインしていれば、カートに表示 -->
+							<td th:text="${c.CART_DATE}"></td>
+							<td th:text="${c.GOODS_NAME}"></td>
+							<td th:text="${c.GOODS_PRICE}+円"></td>
+							<td th:text="${c.COUNT}"></td>
+					<!--	<td>
 								<form method="POST" action="/cartcount">
 								<input type="hidden" name="goodsid" th:value="${c.GOODS_ID}">
 								<input type="hidden" name="count" th:value="${count}">
-								 <select name="count" >
-									<option value=1>1</option>
-									<option value=2>2</option>
-									<option value=3>3</option>
-									<option value=4>4</option>
-									<option value=5>5</option>
-								</select>
-				 			</form>
-						</td>
+									<select name="count" >
+										<option value=1>1</option>
+										<option value=2>2</option>
+										<option value=3>3</option>
+										<option value=4>4</option>
+										<option value=5>5</option>
+									</select>
+				 				</form>
+							</td>
 					  -->
-						<td th:text="${c.GOODS_PRICE}*${c.COUNT}+円"></td>
-						<td>
-							<form method="POST" action="/cart2">
-								<input type="hidden" name="goodsid" th:value="${c.GOODS_ID}">
-								<input type="submit" value="削除">
-						 	</form>
-						</td>
+							<td th:text="${c.GOODS_PRICE}*${c.COUNT}+円"></td>
+							<td>
+								<form method="POST" action="/cart2">
+									<input type="hidden" name="goodsid" th:value="${c.GOODS_ID}">
+									<input type="submit" value="削除">
+							 	</form>
+							</td>
 
-					</tr>
+						</tr>
+					</tbody>
 				</table>
-
+				<div class="total row" >
+					<div class="col-md-12 col-sm-12 col-xs-12" th:text="合計：+${carttotal}+円"></div>
+				</div>
+				<div class="whichbotton" th:if="${user ne null}">
 					<!-- 購入ボタンを押すと画面移動 -->
 					<form method="POST" action="/buy">
 						<div th:each="c:${cartlist}">
@@ -94,7 +105,11 @@
 						</div>
 						<input type="submit" value="購入する">
 					</form>
-				<a href="/goods?category=1"><input type="submit" value="買い物を続ける"></a>
+					<form method="POST" action="/goods">
+						<input type="submit" value="買い物を続ける">
+					</form>
+
+				</div>
 			</section>
 		</div>
 
