--- a/Ecsite_ver2/src/main/resources/templates/goods.html
+++ b/Ecsite_ver2/src/main/resources/templates/goods.html
@@ -2,6 +2,7 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <mata charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>Handmade Nariko</title>
 <link rel="stylesheet" href="css/mystyle.css">
 <link rel="stylesheet" href="js/slick-theme.css" type="text/css">
@@ -11,19 +12,22 @@
 	href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
 	crossorigin="anonymous">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <script
 	src="js/slick.min.js"></script> <script src="js/lightbox.js"
 	type="text/javascript"></script> <script src="myjs.js"></script>
 </head>
-<body>
-	<header>
-		<div class="shop_name">
+<body class="container-fluid">
+	<header class="row">
+		<div class="shop_name col-md-4 col-sm-4 col-xs-12">
 			<p>手作りちりめん細工の通販サイト</p>
 			<h1>ハンドメイドのNariko</h1>
 		</div>
 		<!-- ナビ メニュー -->
 		<nav>
-			<ul class="menu">
+			<ul class="menu col-md-8 col-sm-8 col-xs-12">
 				<li><a href="/index"><i class="fas fa-home"></i>Home</a></li>
 				<li><a href="/mypage"><i class="fas fa-user-circle"></i>Mypage</a></li>
 				<li><a href="/cart"><i class="fas fa-shopping-cart"></i>Cart</a></li>
@@ -37,8 +41,37 @@
 			</ul>
 		</nav>
 	</header>
-	<article>
-		<div class="main">
+	<article class="row">
+		<div class="sub col-md-4 col-sm-4 col-xs-12">
+			<aside>
+				<!-- カテゴリー一覧 -->
+				<div class="category">
+					<h2>CATEGORY カテゴリー</h2>
+					<ul class=category_list>
+						<li><a href="/goods?category=1">干支</a></li>
+						<li><a href="/goods?category=2">季節</a></li>
+						<li><a href="/goods?category=3">アクセサリー</a></li>
+						<li><a href="/goods?category=4">小物・雑貨</a></li>
+					</ul>
+				</div>
+				<!-- 価格検索 -->
+				<div class="search">
+					<h2>価格で絞り込む</h2>
+					<div class="commit_price">
+						<form method="GET" action="/goodscommit">
+							<input type="text" name="pricemin" size="12" maxlength="6">
+							<span>円～</span>
+							<input type="text" name="pricemax" size="12" maxlength="6">
+							<span>円</span>
+							<div class="buttom_submit">
+								<input type="submit" value="絞り込む">
+							</div>
+						</form>
+					</div>
+				</div>
+			</aside>
+		</div>
+		<div class="main col-md-8 col-sm-8 col-xs-12">
 			<section class="sec_goods">
 				<!-- カテゴリー名 -->
 				<div th:each="gc:${goods_category}">
@@ -56,11 +89,11 @@
 
 				<!-- 各カテゴリー内の商品一覧 -->
 
-				 	<div class="ichiran">
+				 	<div class="ichiran row">
 						<div th:each="g:${goods}">
 						<form class="goodsform" method="POST" action="/cart">
 							<ul>
-							<!--	<li><img th:if="${g.GOODS_PHOTO eq unknown}" th:src="@{../images/soldout.jpg}"></li>  -->
+							<!--<li><img th:if="${g.GOODS_PHOTO == null}" th:src="../images/soldout.jpg"></li>  -->
 								<li><img th:if="${g.GOODS_PHOTO ne null}" th:src="@{${g.GOODS_PHOTO}}" th:alt-title="${g.GOODS_NAME}"></li>
 								<li th:text="${g.GOODS_NAME}+'&nbsp;'+${g.GOODS_PRICE}+円"></li>
 
@@ -82,35 +115,7 @@
 
 			</section>
 		</div>
-		<div class="sub">
-			<aside>
-				<!-- カテゴリー一覧 -->
-				<div class="category">
-					<h2>CATEGORY カテゴリー</h2>
-					<ul class=category_list>
-						<li><a href="/goods?category=1">干支</a></li>
-						<li><a href="/goods?category=2">季節</a></li>
-						<li><a href="/goods?category=3">アクセサリー</a></li>
-						<li><a href="/goods?category=4">小物・雑貨</a></li>
-					</ul>
-				</div>
-				<!-- 価格検索 -->
-				<div class="search">
-					<h2>価格で絞り込む</h2>
-					<div class=commit_price>
-						<form method="GET" action="/goodscommit">
-							<input type="text" name="pricemin" size="4" maxlength="6">
-							<span>円～</span>
-							<input type="text" name="pricemax" size="4" maxlength="6">
-							<span>円</span>
-							<div class="buttom_submit">
-								<input type="submit" value="絞り込む">
-							</div>
-						</form>
-					</div>
-				</div>
-			</aside>
-		</div>
+
 	</article>
 	<footer>
 		<small>Copyright 2019 Nariko</small>
