--- a/Ecsite_ver2/src/main/resources/templates/index.html
+++ b/Ecsite_ver2/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <mata charset="utf-8">
+<meta name="viewport" content="width=device-width">
 <title>Handmade Nariko</title>
 <link rel="stylesheet" href="css/mystyle.css">
 <link rel="stylesheet" href="js/slick-theme.css" type="text/css">
@@ -11,23 +12,24 @@
 	href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
 	crossorigin="anonymous">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> <script
 	src="js/slick.min.js"></script> <script src="js/lightbox.js"
 	type="text/javascript"></script> <script src="myjs.js"></script>
 </head>
-<body>
-	<header>
-		<div class="shop_name">
+<body class="container-fluid">
+	<header class="row">
+		<div class="shop_name col-md-4 col-sm-4 col-xs-12">
 			<p>手作りちりめん細工の通販サイト</p>
 			<h1>ハンドメイドのNariko</h1>
 		</div>
 		<nav>
-			<ul class="menu">
+			<ul class="menu col-md-8 col-sm-8 col-xs-12">
 				<li><a href="/index"><i class="fas fa-home"></i>Home</a></li>
-				<li><a href="/mypage"><i class="fas fa-user-circle"></i>Mypage</a>
-				</li>
-				<li><a href="/cart"><i class="fas fa-shopping-cart"></i>Cart</a>
-				</li>
+				<li><a href="/mypage"><i class="fas fa-user-circle"></i>Mypage</a></li>
+				<li><a href="/cart"><i class="fas fa-shopping-cart"></i>Cart</a></li>
 				<!-- ユーザーがログインしていればユーザー名を表示 -->
 				<!-- if文の意味は、ユーザーデーターがnullならばLogin表示するという意味 -->
 				<li th:if="${user eq null}"><a href="/login"><i
@@ -40,20 +42,33 @@
 			</ul>
 		</nav>
 	</header>
-	<article>
-		<div class="main">
+	<article class="row">
+		<div class="sub col-md-4 col-sm-4 col-xs-12">
+			<aside>
+				<div class="category">
+					<h2>CATEGORY カテゴリー</h2>
+					<ul class=category_list>
+						<li><a href="/goods?category=1">干支</a></li>
+						<li><a href="/goods?category=2">季節</a></li>
+						<li><a href="/goods?category=3">アクセサリー</a></li>
+						<li><a href="/goods?category=4">小物・雑貨</a></li>
+					</ul>
+				</div>
+			</aside>
+		</div>
+		<div class="main col-md-8 col-sm-8 col-xs-12">
 			<section>
 				<ul class="myslider">
-					<li><img src="images/inu.jpg" alt=""></li>
-					<li><img src="images/tori.jpg" alt=""></li>
-					<li><img src="images/usagibrooch.jpg" alt=""></li>
+					<li><img src="images/inu.jpg" alt="いぬ"></li>
+					<li><img src="images/tori.jpg" alt="とり"></li>
+					<li><img src="images/usagibrooch.jpg" alt="うさぎブローチ"></li>
 				</ul>
 			</section>
 			<section class="sec_recommend">
 				<h2 class="recommend">おすすめ商品紹介</h2>
-				<ul>
+				<ul class="row">
 				<!-- DBからの呼び出しバージョン -->
-					<li th:each="eto:${eto}">
+					<li class=" col-md-4 col-sm-4 col-xs-12" th:each="eto:${eto}">
 						<dl>
 							<dt>
 								<a th:href="@{${eto.GOODS_PHOTO}}" data-lightbox="group"
@@ -66,7 +81,7 @@
 							<dd th:text="${eto.GOODS_PRICE}+円"></dd>
 						</dl>
 					</li>
-					<li th:each="jw:${jewelry}">
+					<li class=" col-md- col-sm-4 col-xs-12" th:each="jw:${jewelry}">
 						<dl>
 							<dt>
 								<a th:href="@{${jw.GOODS_PHOTO}}" data-lightbox="group"
@@ -74,13 +89,11 @@
 									<img th:src="@{${jw.GOODS_PHOTO}}"  th:alt-title="${jw.GOODS_NAME}">
 								</a>
 							</dt>
-
 							<dd class="recommend_goods"
 								th:text="${jw.CATEGORY_NAME+':'+jw.GOODS_NAME}"></dd>
 							<dd th:text="${jw.GOODS_PRICE}+円"></dd>
 						</dl>
-		<!-- カテゴリ季節のおすすめアイテム -->
-					<li th:each="s:${season}">
+					<li class=" col-md-4 col-sm-4 col-xs-12" th:each="s:${season}">
 						<dl>
 							<dt>
 								<a th:href="@{${s.GOODS_PHOTO}}" data-lightbox="group"
@@ -96,31 +109,7 @@
 				</ul>
 			</section>
 		</div>
-		<div class="sub">
-			<aside>
-				<div class="category">
-					<h2>CATEGORY カテゴリー</h2>
-					<ul class=category_list>
-						<li><a href="/goods?category=1">干支</a></li>
-						<li><a href="/goods?category=2">季節</a></li>
-						<li><a href="/goods?category=3">アクセサリー</a></li>
-						<li><a href="/goods?category=4">小物・雑貨</a></li>
-					</ul>
-				</div>
-		<!--	<div class="search">
-					<h2>価格で絞り込む</h2>
-					<form class=commit_price>
-						<input type="text" name="price[min]" size="4" maxlength="6">
-						<span>円～</span> <input type="text" name="price[max]" size="4"
-							maxlength="6"> <span>円</span>
-						<div class="buttom_submit">
-							<input type="submit" name="commit" value="絞り込む">
-						</div>
-					</form>
-				</div>
-		-->
-			</aside>
-		</div>
+
 	</article>
 	<footer>
 		<small>Copyright 2019 Nariko</small>
